tests/files/type_checker_tests/should_fail/052.cmdr
//Should fail when binding types don't match
x: int = 3.9;
